--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/WebShop_2008.csproj
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/WebShop_2008.csproj
@@ -60,45 +60,45 @@
     <Content Include="Admin\genericAsp\SearchForm_grArtikel.htm" />
     <Content Include="Admin\genericAsp\SearchForm_ofAdressen.htm" />
     <Content Include="Admin\genericAsp\specialSearchl.aspx" />
-    <Content Include="Admin\genericAsp\tableManager.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_Adressen.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_AdressenPLZ.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchAngebot.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchAngebotArtikel.asp" />
+    <Content Include="Admin\genericAsp\tableManager.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_Adressen.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_AdressenPLZ.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchAngebot.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchAngebotArtikel.aspx" />
     <Content Include="Admin\genericAsp\tableRedirector_buchAuftrag.aspx" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchAuftragArtikel.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchLieferschein.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchLieferscheinArtikel.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchRechnung.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchRechnungArtikel.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchRetourwaren.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_buchRetourwarenArtikel.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_Categories.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grArtikel-Einheiten.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grArtikel-Lagerort.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grArtikel-VertriebsKosten.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grArtikel-VerwandteArtikel.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grArtrikel_Staffelpreise.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grBranchen.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grLand.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grMWST.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grPLZ.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grZahlungsbedingung.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_grZahlungsmethode.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_Lieferanten.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_ofDictionary.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_Products.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_ProductsSpecial.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_Vars.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_webAdminMenu.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_webCatTopProducts.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_webFAQ.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_webNewsletter.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_webPages.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_webReferers.asp" />
-    <Content Include="Admin\genericAsp\tableRedirector_webTopTen.asp" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchAuftragArtikel.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchLieferschein.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchLieferscheinArtikel.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchRechnung.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchRechnungArtikel.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchRetourwaren.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_buchRetourwarenArtikel.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_Categories.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grArtikel-Einheiten.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grArtikel-Lagerort.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grArtikel-VertriebsKosten.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grArtikel-VerwandteArtikel.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grArtrikel_Staffelpreise.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grBranchen.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grLand.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grMWST.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grPLZ.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grZahlungsbedingung.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_grZahlungsmethode.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_Lieferanten.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_ofDictionary.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_Products.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_ProductsSpecial.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_Vars.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_webAdminMenu.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_webCatTopProducts.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_webFAQ.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_webNewsletter.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_webPages.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_webReferers.aspx" />
     <Compile Include="Admin\help.aspx" />
+    <Content Include="Admin\genericAsp\tableRedirector_webTopTen.aspx" />
     <Content Include="Admin\impex\export.txt" />
     <Content Include="Admin\impex\exportPreises.aspx" />
     <Content Include="Admin\impex\exportPreisesSmarteFox.aspx" />
@@ -139,7 +139,6 @@
     <Content Include="Admin\priceCompare\uDefault.asp" />
     <Compile Include="Admin\stats\stat_webGenericStats.aspx" />
     <Content Include="Admin\style.css" />
-    <Compile Include="Admin\test1.aspx" />
     <Content Include="Admin\setup\wizzard.aspx" />
     <Content Include="Admin\upload\upload.inc" />
     <Content Include="Admin\upload\uploadLogo.aspx" />
@@ -1549,6 +1548,8 @@
     <Content Include="skins\skin_ptec\productImages\9004 Brenner.jpg" />
     <Content Include="skins\skin_ptec\productImages\9005 Brenner mit Kabel.jpg" />
     <Content Include="skins\skin_ptec\template_flash_example.html" />
+    <Content Include="style.css" />
+    <Content Include="Styles.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
