--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/WebShop_2008.csproj
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/WebShop_2008.csproj
@@ -288,12 +288,24 @@
     <Content Include="Default.aspx" />
     <Content Include="DefaultPrintEdition.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="intrasoft\aspedit\aspedit.asp" />
-    <Content Include="intrasoft\aspedit\browser.asp" />
-    <Content Include="intrasoft\aspedit\dbeditor.asp" />
-    <Content Include="intrasoft\aspedit\editor.asp" />
+    <Compile Include="intrasoft\aspedit\aspedit.aspx" />
+    <Compile Include="intrasoft\aspedit\browser.aspx" />
+    <Compile Include="intrasoft\aspedit\dbeditor.aspx" />
+    <Content Include="intrasoft\aspedit\db\aspedit.mdb">
+    </Content>
+    <Compile Include="intrasoft\aspedit\editor.aspx" />
     <Content Include="intrasoft\aspedit\images\aspedit.gif" />
-    <Content Include="intrasoft\aspedit\users.asp" />
+    <Content Include="intrasoft\aspedit\includes\banner.inc.aspx" />
+    <Content Include="intrasoft\aspedit\includes\check.inc.aspx" />
+    <Content Include="intrasoft\aspedit\includes\db_close.inc.aspx" />
+    <Content Include="intrasoft\aspedit\includes\db_open.inc.aspx" />
+    <Content Include="intrasoft\aspedit\includes\encryption.inc.aspx" />
+    <Content Include="intrasoft\aspedit\includes\upload.inc.aspx" />
+    <Compile Include="intrasoft\aspedit\includes\uploader.inc.aspx" />
+    <Content Include="intrasoft\aspedit\readme\aspEdit - ReadMe.txt" />
+    <Content Include="intrasoft\aspedit\readme\aspEdit - Revisions History.txt" />
+    <Content Include="intrasoft\aspedit\styles\style.css" />
+    <Compile Include="intrasoft\aspedit\users.aspx" />
     <Compile Include="intrasoft\callAccessServer.aspx" />
     <Compile Include="intrasoft\connClose.aspx" />
     <Compile Include="intrasoft\connOpen.aspx" />
