--- a/IntraSell_WebShop/WebShop_2008/WebShop_2008/Web.config
+++ b/IntraSell_WebShop/WebShop_2008/WebShop_2008/Web.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-	<appSettings/>
-	<connectionStrings/>
+	<appSettings />
+	<connectionStrings />
 	<system.web>
 		<!-- 
             Legen Sie beim Kompilieren debug="true" fest, um 
@@ -16,7 +16,7 @@
             des Sicherheitsauthentifizierungsmodus, mit dem 
             ASP.NET eingehende Benutzer identifiziert. 
         -->
-		<authentication mode="Windows"/>
+		<authentication mode="Windows" />
 		<!--
             Der Abschnitt <customErrors> ermöglicht die Konfiguration 
             der Vorgehensweise bei unbehandelten Fehlern während 
@@ -31,8 +31,8 @@
         -->
 		<pages>
 			<controls>
-				<add tagPrefix="aspx" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-				<add tagPrefix="aspx" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+				<add tagPrefix="aspx" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add tagPrefix="aspx" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
 			</controls>
 		</pages>
 	</system.web>
@@ -44,5 +44,16 @@
         IIS ist er nicht erforderlich.
     -->
 	<system.webServer>
+        <defaultDocument>
+            <files>
+                <clear />
+                <add value="default.aspx" />
+                <add value="index.htm" />
+                <add value="Default.htm" />
+                <add value="Default.asp" />
+                <add value="index.html" />
+                <add value="iisstart.htm" />
+            </files>
+        </defaultDocument>
 	</system.webServer>
 </configuration>
