--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/Web.config
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/Web.config
@@ -47,13 +47,14 @@
         <defaultDocument>
             <files>
                 <clear />
-                <add value="default.aspx" />
                 <add value="index.htm" />
+                <add value="default.aspx" />
                 <add value="Default.htm" />
                 <add value="Default.asp" />
                 <add value="index.html" />
                 <add value="iisstart.htm" />
             </files>
         </defaultDocument>
+        <httpRedirect enabled="false" destination="http://80.120.26.138" />
 	</system.webServer>
 </configuration>
