--- a/IntraSell_WebShop/WebShop_2008/WebShop_2008/Web.config
+++ b/IntraSell_WebShop/WebShop_2008/WebShop_2008/Web.config
@@ -35,6 +35,7 @@
 				<add tagPrefix="aspx" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
 			</controls>
 		</pages>
+        <sessionState cookieless="AutoDetect" />
 	</system.web>
 	<system.codedom>
 	</system.codedom>
