--- a/IntraSell_Net/IntraSell_Net/My Project/Settings.settings
+++ b/IntraSell_Net/IntraSell_Net/My Project/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Dsn=intrasell_daten_2;uid=root;pwd=a1060</Value>
     </Setting>
+    <Setting Name="intrasell_daten_2_ConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;server=localhost;User Id=root;password=a1060;Persist Security Info=True;database=intrasell_daten_2&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;MySql.Data.MySqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">server=localhost;User Id=root;password=a1060;Persist Security Info=True;database=intrasell_daten_2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
