--- a/IntraSell_Net/IntraSell_Net/IntraSell_Net.vbproj
+++ b/IntraSell_Net/IntraSell_Net/IntraSell_Net.vbproj
@@ -15,6 +15,21 @@
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -48,11 +63,18 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>cashier.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.5.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -73,18 +95,15 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\dsArtikel.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dsArtikel.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Data\dsAdressen.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>dsAdressen.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="Data\dsAdressen.vb">
-      <DependentUpon>dsAdressen.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="Data\dsAdressen2.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>dsAdressen2.xsd</DependentUpon>
     </Compile>
     <Compile Include="Data\dsPLZ.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -101,12 +120,6 @@
       <DependentUpon>AbstractForm.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms\AbstractForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\KundenListe2.Designer.vb">
-      <DependentUpon>KundenListe2.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\KundenListe2.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Kunden.Designer.vb">
@@ -148,9 +161,6 @@
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\KundenListe2.resx">
-      <DependentUpon>KundenListe2.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Kunden.resx">
       <DependentUpon>Kunden.vb</DependentUpon>
     </EmbeddedResource>
@@ -169,16 +179,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Data\dsAdressen2.xsc">
-      <DependentUpon>dsAdressen2.xsd</DependentUpon>
+    <None Include="Data\dsArtikel.xsc">
+      <DependentUpon>dsArtikel.xsd</DependentUpon>
     </None>
-    <None Include="Data\dsAdressen2.xsd">
+    <None Include="Data\dsArtikel.xsd">
       <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>dsAdressen2.Designer.vb</LastGenOutput>
+      <LastGenOutput>dsArtikel.Designer.vb</LastGenOutput>
     </None>
-    <None Include="Data\dsAdressen2.xss">
-      <DependentUpon>dsAdressen2.xsd</DependentUpon>
+    <None Include="Data\dsArtikel.xss">
+      <DependentUpon>dsArtikel.xsd</DependentUpon>
+    </None>
+    <None Include="Data\dsAdressen.xsc">
+      <DependentUpon>dsAdressen.xsd</DependentUpon>
+    </None>
+    <None Include="Data\dsAdressen.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dsAdressen.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Data\dsAdressen.xss">
+      <DependentUpon>dsAdressen.xsd</DependentUpon>
     </None>
     <None Include="Data\dsPLZ.xsc">
       <DependentUpon>dsPLZ.xsd</DependentUpon>
@@ -192,17 +213,6 @@
       <DependentUpon>dsPLZ.xsd</DependentUpon>
     </None>
     <None Include="Forms\ClassDiagramForms.cd" />
-    <None Include="Data\dsAdressen.xsc">
-      <DependentUpon>dsAdressen.xsd</DependentUpon>
-    </None>
-    <None Include="Data\dsAdressen.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <SubType>Designer</SubType>
-      <LastGenOutput>dsAdressen.Designer.vb</LastGenOutput>
-    </None>
-    <None Include="Data\dsAdressen.xss">
-      <DependentUpon>dsAdressen.xsd</DependentUpon>
-    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -212,6 +222,31 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="cashier.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 3.1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
